# libraries

./: Makefile  apr-0.9.7.tar.bz2  apr-util-0.9.7.tar.bz2  build  build-apr  build-aprutil  build-expat  build-gd  build-gettext  build-iconv  build-icu  build-jpeg  build-neon  build-openssl  build-oslib  build-png  build-sablot  build-sshlib  build-xml  build-xslt  build-zlib  rebuild
Sablot-1.0.1/: Makefile.in  RELEASE  configure  configure.in  makefile_include.msvc  sablot_config.msvc
apr/: APRVARS  Makefile  apr.exp  config.cache  config.nice  config.status  configure  exports.c  libtool
apr-0.9.5/: configure
apr-util/: config.nice  configure  export_vars.h  exports.c
apr-util-0.9.5/: configure
expat-1.95.4/: config.status  libtool
gd-1.8.4/: Makefile  gd_io.s  gd_png.s  gd_png.s.debug
gettext-0.11.5/: Makefile  config.h  config.status  libtool
libpng-1.2.0/: makefile
libpng-1.2.5/: makefile
libxml2-2.6.9/: Makefile.in  configure
libxslt-1.1.6/: Makefile.in  aclocal.m4  configure  libxslt.spec
neon-0.22.0/: .release.sh  BUGS  ChangeLog  INSTALL.win32  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.h.in  config.hw  config.hw.in  configure  configure.in  neon-config.in  neon.mak
neon-0.22.0/doc/: date.xml  manual.css  manual.xml  refentry.xml
neon-0.22.0/doc/html/: apas02.html  apas03.html  apas04.html  apas05.html  apas06.html  apas07.html  apas08.html  apas09.html  apas10.html  apas11.html  apas12.html  auth.html  basic.html  ch01s02.html  ch01s03.html  ch02.html  compliance.html  gfdl.html  index.html  intro.html  locking.html  lowlevel.html  props.html  ref.html  refalloc.html  refauth.html  refbuf.html  refbufapp.html  refbufcr.html  refbufdest.html  refbufutil.html  refconfig.html  referr.html  refgetst.html  refneon.html  refopts.html  refreq.html  refreqbody.html  refreqhdr.html  refsess.html  (+11 more)
neon-0.22.0/doc/man/: ne_add_request_header.3  ne_buffer.3  ne_buffer_append.3  ne_buffer_clear.3  ne_buffer_create.3  ne_buffer_destroy.3  ne_get_error.3  ne_get_status.3  ne_malloc.3  ne_request_create.3  ne_session_create.3  ne_set_request_body_buffer.3  ne_set_server_auth.3  ne_set_useragent.3  ne_shave.3  ne_ssl_certificate.3  ne_ssl_load_ca.3  ne_ssl_load_default_ca.3  ne_ssl_readable_dname.3  ne_ssl_set_verify.3  ne_status.3  ne_token.3  ne_version_match.3  neon-config.1  neon.3
neon-0.22.0/doc/ref/: alloc.xml  sess.xml
neon-0.22.0/macros/: ChangeLog  neon-test.m4  neon-xml-parser.m4  neon.m4
neon-0.22.0/src/: .cvsignore  ChangeLog  ne_alloc.c  ne_auth.c  ne_auth.h  ne_compress.c  ne_cookies.c  ne_i18n.c  ne_private.h  ne_props.c  ne_request.c  ne_request.h  ne_session.c  ne_session.h  ne_socket.c  ne_socket.h  ne_string.c  ne_string.h  ne_uri.c  ne_utils.h  ne_xml.c
neon-0.22.0/test/: .cvsignore  ChangeLog  Makefile.in  basic.c  lock.c  makekeys.sh  regress.c  request.c  session.c  socket.c  ssl.c  string-tests.c  uri-tests.c  util-tests.c  xml.c
neon-0.22.0/test/common/: ChangeLog  child.c  tests.c  tests.h
neon-0.23.5/: .cvsignore  BUGS  ChangeLog  NEWS  TODO  aclocal.m4  config.h.in  config.hw  configure  configure.in  neon-config.in  neon.mak
neon-0.24.4/: aclocal.m4  config.h.in  config.hw  configure  ltmain.sh
oslib/: !ReadMe  ChangeLog  WideFuncts  dustbin
oslibsupport/: !MakeLib  (+3 more)
(+915 files in other folders)
